--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "single page aplication",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --open --mode development"
   },
   "keywords": [
     "javascript"
@@ -14,9 +16,9 @@
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "babel-loader": "^8.2.2",
-    "html-webpack-plugin": "^5.3.2",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0",
+    "html-webpack-plugin": "^4.5.2",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^4.0.0"
   }
 }
