--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
-    "start": "webpack-dev-server --open --mode development"
+    "start": "webpack serve --open --mode development --env development"
   },
   "keywords": [
     "javascript"
@@ -18,7 +18,7 @@
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^4.5.2",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0"
   }
 }
