--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "webpack": "^4.46.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0"
+  },
+  "dependencies": {
+    "copy-webpack-plugin": "^6.2.1"
   }
 }
